Check for duplicate module names before loading modules that were "pushed" by the boot loader.  The boot loader pushes the module name for the root file system (unless the root file system is ffs) even if the file system module is built into the kernel.  When this happens, we get a lot of "redefined symbol" error messages.

This fix does not alter the behavior of pushing the file system
name.  It simply avoids the redefined symbol errors by detecting
that the module is already built-in to the kernel and not trying
to load another copy.

While here, differentiate the error message text between "failed
to load" and "failed to fetch_info" conditions.

Addresses PR kern/50357